18398
```scala
sun@sun-laptop:/mnt/data-local/Work/Workspace/dev/miniboxing-plugin/sandbox(wip)$ cat gh-bug-18-2-spec.scala 
abstract class Dist[@specialized(AnyRef) A, @specialized(Int) B] {
  def apply(a: A): A

  def iterateUntil(): Dist[A, B] = new Dist[A, B] {
    def loop(a: A): A = a
    def apply(a: A): A = loop(a)
  }
}
sun@sun-laptop:/mnt/data-local/Work/Workspace/dev/miniboxing-plugin/sandbox(wip)$ ../../scala-trunk/build/quick/bin/scalac gh-bug-18-2-spec.scala 
gh-bug-18-2-spec.scala:5: error: Parameter type in structural refinement may not refer to an abstract type defined outside that refinement
    def loop(a: A): A = a
             ^
one error found
sun@sun-laptop:/mnt/data-local/Work/Workspace/dev/miniboxing-plugin/sandbox(wip)$ ../../scala-trunk/build/quick/bin/scalac -Ydebug gh-bug-18-2-spec.scala 
[running phase parser on gh-bug-18-2-spec.scala]
[running phase namer on gh-bug-18-2-spec.scala]
[running phase packageobjects on gh-bug-18-2-spec.scala]
[running phase typer on gh-bug-18-2-spec.scala]
[running phase patmat on gh-bug-18-2-spec.scala]
[running phase superaccessors on gh-bug-18-2-spec.scala]
[running phase extmethods on gh-bug-18-2-spec.scala]
[running phase pickler on gh-bug-18-2-spec.scala]
[running phase refchecks on gh-bug-18-2-spec.scala]
[running phase selectiveanf on gh-bug-18-2-spec.scala]
[running phase selectivecps on gh-bug-18-2-spec.scala]
[running phase uncurry on gh-bug-18-2-spec.scala]
[running phase tailcalls on gh-bug-18-2-spec.scala]
[running phase specialize on gh-bug-18-2-spec.scala]
warning: issue error: not found: type A$sp
warning: issue error: not found: type A$sp
warning: issue error: not found: type A$sp
warning: issue error: not found: type A$sp
warning: issue error: not found: type A$sp
warning: issue error: not found: type A$sp
warning: issue error: not found: type A$sp
warning: issue error: not found: type A$sp
warning: issue error: not found: type A$sp
warning: issue error: not found: type A$sp
warning: issue error: not found: type A$sp
warning: issue error: not found: type A$sp
warning: issue error: not found: type A$sp
gh-bug-18-2-spec.scala:5: error: Parameter type in structural refinement may not refer to an abstract type defined outside that refinement
    def loop(a: A): A = a
             ^
gh-bug-18-2-spec.scala:5: error: [ suppressed ] Parameter type in structural refinement may not refer to a type member of that refinement
    def loop(a: A): A = a
             ^
warning: issue error: not found: type A$sp
warning: issue error: not found: type A$sp
warning: issue error: not found: type A$sp
warning: issue error: not found: type A$sp
warning: issue error: not found: type A$sp
warning: issue error: not found: type A$sp
warning: issue error: not found: type A$sp
warning: issue error: not found: type A$sp
warning: issue error: not found: type A$sp
22 warnings found
two errors found
```
